--- a/futureplans.html
+++ b/futureplans.html
@@ -3,37 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Future Plans</title>
 
 
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
  </head>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="file:///C:/Users/Liyaa/finalproject/futureplans.html#">Future Plans</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/final.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Future Plans</a>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Gallery
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Me</a>
-                <a class="dropdown-item" href="#">Friends & Family</a>
-                <a class="dropdown-item" href="#">Hair</a>
-              </div>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
             </li>
           </ul>
         </div>
