More pictures to my Gallery Page

--- a/ch.html
+++ b/ch.html
@@ -44,6 +44,14 @@
     $(".pause-button").on("click", function() {
       audioElement.pause(); });
 </script>
-<video src="images/Hair1.mp4"></video>
+
+<div class="container">
+  <img src="images/Hair1_Moment.jpg" alt="Avatar" class="image">
+  <div class="overlay">Medium Sized box braids. </div>
+<video src="images/Hair1.mp4" style= "height: 450px;" style= "width: 50%;"></video>
+
+<div class="container">
+  <img src=".jpg" alt="Avatar" class="image">
+  <div class="overlay"> </div>
 </body>
 </html>
