--- a/final.html
+++ b/final.html
@@ -18,15 +18,16 @@
             <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/futureplans.html#">Future Plans</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/contact.html">Contact</a>
+            <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/info.html">Info Page</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="file:///C:/Users/Liyaa/finalproject/gallery.html#" tabindex="-1" aria-disabled="true">Gallery</a>
+            <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
           </li>
         </ul>
       </div>
     </nav>
 </head>
 <body>
+
 </body>
 </html>
