--- a/futureplans.html
+++ b/futureplans.html
@@ -20,7 +20,7 @@
               <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/final.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/contact.html">Contact</a>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/info.html">Info Page</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
