--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#">Gallery</a>
+        <a class="navbar-brand" href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/final.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Future Plans</a>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/futureplans.html#">Future Plans</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/info.html">Info Page</a>
             </li>
           </ul>
         </div>
@@ -36,11 +36,10 @@
 </head>
 <body>
 
-
     <script src="https://code.jquery.com/jquery.js"></script>
     <script>
     var audioElement = document.createElement("audio");
-    audioElement.setAttribute("src", "images/Rico.mp3");
+    audioElement.setAttribute("src", "images/Citygirls.mp3");
     // Theme Button
     $(".theme-button").on("click", function() {
       audioElement.play();
@@ -63,15 +62,30 @@ function closeNav() {
 }
  </script>
 
-<div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/family.html">Family</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/ch.html">Clients and hairstyles</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/info.html">info</a>
   </div>
-  <div id="main">
-    <button class="openbtn" onclick="openNav()">&#9776;</button>
-  </div>
+  <img src="Me/IMG_8015_Original.jpg" style= "height: 450px;" style= "width: 50%;">
+  <img src="Me/IMG_1017_Original.jpg" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_3565.jpg" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_2970.JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0312.JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0572_Original (Edited)(1).JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="images/IMG_2586(Edited).jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0810.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/Video 11_Moment.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/Video_Moment.jpg" alt=""  style="height: 450px;" style="width: 50%;">
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
 </body>
+<div class="row">
+  <div class="column">
+    <img src="img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img_mountains.jpg" alt="Mountains" style="width:100%">
+  </div>
+</div>
 </html>
