--- a/info.html
+++ b/info.html
@@ -7,25 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script>function openNav() {
-        document.getElementById("mySidebar").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-      }
-      
-      /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-      function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
-      }</script>
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/family.html">Family</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/ch.html">Clients and hairstyles</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
-      </div>
-      <div id="main">
-        <button class="openbtn" onclick="openNav()">&#9776;</button>
-      </div>
+  
 </body>
+<div class="bg-image"></div>
+<div class="bg-text">
+  <script>function openNav() {
+    document.getElementById("mySidebar").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+  }
+  
+  /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
+  function closeNav() {
+    document.getElementById("mySidebar").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+  }</script>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="file:///C:/Users/Liyaa/finalproject/family.html">Family</a>
+    <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
+    <a href="file:///C:/Users/Liyaa/finalproject/ch.html">Clients and hairstyles</a>
+    <a href="file:///C:/Users/Liyaa/finalproject/final.html">Portfolio</a>
+  </div>
+  <div id="main">
+    <button class="openbtn" onclick="openNav()">&#9776;</button>
+  </div>
+  <h1>I am Liya Thomas</h1>
+  <p>And I'm a Hairstylist</p>
+</div>
 </html>
