Adding more pictures for the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -73,19 +73,12 @@ function closeNav() {
   <img src="Me/IMG_0810.jpg" alt="" style="height: 450px;" style="width: 50%;">
   <img src="Me/Video 11_Moment.jpg" alt="" style="height: 450px;" style="width: 50%;">
   <img src="Me/Video_Moment.jpg" alt=""  style="height: 450px;" style="width: 50%;">
-  <img src="" alt="">
-  <img src="" alt="">
-  <img src="" alt="">
+  <img src="Me/IMG_2895_Original (Edited).JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0309.JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_9477_Moment.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0854_Original(Edited).jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0866_Original.jpg" alt=""style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_0893_Original (Edited).JPG" alt=""style="height: 450px;" style="width: 50%;">
+  <img src="Me/" alt=""style="height: 450px;" style="width: 50%;">
 </body>
-<div class="row">
-  <div class="column">
-    <img src="img_snow.jpg" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img_forest.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="img_mountains.jpg" alt="Mountains" style="width:100%">
-  </div>
-</div>
 </html>
