--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,7 @@ function closeNav() {
  </script>
 
   </div>
+  <div>
   <img src="Me/IMG_8015_Original.jpg" style= "height: 450px;" style= "width: 50%;">
   <img src="Me/IMG_1017_Original.jpg" style="height: 450px;" style="width: 50%;">
   <img src="Me/IMG_3565.jpg" style="height: 450px;" style="width: 50%;">
@@ -79,6 +80,15 @@ function closeNav() {
   <img src="Me/IMG_0854_Original(Edited).jpg" alt="" style="height: 450px;" style="width: 50%;">
   <img src="Me/IMG_0866_Original.jpg" alt=""style="height: 450px;" style="width: 50%;">
   <img src="Me/IMG_0893_Original (Edited).JPG" alt=""style="height: 450px;" style="width: 50%;">
-  <img src="Me/" alt=""style="height: 450px;" style="width: 50%;">
+  <img src="Me/1c00a3a1e59046ba93fb8ab5b1ce19ab_Moment.jpg" alt=""style="height: 450px;" style="width: 50%;">
+  <img src="Me/filtered-6C5F7BAD-328F-4A56-86B5-8525D914B617_Moment.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_1620.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_2906_Original.JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_4984.jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_3340.JPG" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/Snapchat-1249322929 (Edited).jpg" alt="" style="height: 450px;" style="width: 50%;">
+  <img src="Me/V_Moment.jpg" alt=""style="height: 450px;" style="width: 50%;">
+  <img src="Me/IMG_3936.jpg" alt=""style="height: 450px;" style="width: 50%;">
+  </div>
 </body>
 </html>
