--- a/ch.html
+++ b/ch.html
@@ -45,13 +45,6 @@
       audioElement.pause(); });
 </script>
 
-<div class="container">
-  <img src="images/Hair1_Moment.jpg" alt="Avatar" class="image">
-  <div class="overlay">Medium Sized box braids. </div>
-<video src="images/Hair1.mp4" style= "height: 450px;" style= "width: 50%;"></video>
-
-<div class="container">
-  <img src=".jpg" alt="Avatar" class="image">
-  <div class="overlay"> </div>
+<img src="" alt="" >
 </body>
 </html>
