--- a/final.html
+++ b/final.html
@@ -21,13 +21,33 @@
             <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/info.html">Info Page</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
+            <a class="nav-link" href="https://liyaa-t.github.io/finalproject/gallery.html">Gallery</a>
           </li>
         </ul>
       </div>
     </nav>
 </head>
-<body>
+<body style="background-color:yellow;">
+  <h1> Get to Know Liya</h1>
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/profile.php?id=100015395256584" class="fa fa-facebook"></a>
+<p> 
+  <img src="Me/IMG_3340.JPG" style= "height: 250px;" style= "width: 100%;" style="float: left;" >
+<img src="Me/recorded-511034269108_Moment.jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+<img src="Me/Video11_Moment.jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+<img src="Me/IMG_5928.jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+<img src="Me/IMG_5936.jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+<img src="Me/IMG_2949.JPG" style="height: 250px;" style= "width: 100%;" style="float: left;">
+<img src="Me/IMG_1397(Edited).jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+</p> 
+ <br>Hiiii I'm Liya (Lee-yuh) Thomas and I guess you can call me something like a quiet storm, Im very quiet in person if I don't know you. But once you get to know me I don't shut up. But personally I don't like to meet new people I am a very Inside saty in my box person. But as soon as you get to know me I am a Cool, Sweet, fun loving person with a really BIG HEART emphasis on the Big Heart. But my hobbies are eating, sleeping, doing hair, learning dances, and being with my friends. But I have a  BIG passion for doing hair & I plan to become a entrepreneur after I turn 16, and start my company "The Deauviance Collection". But I do also love to dress up but I hate wearing dresses (weird? I know) I also love to go get like my eyebrows done, or a pedicure. But I also hate shopping I honestkt find it boring. I also love to do my hair which shouldn't be a shock since I am aspiring to be a great Hairstylist. I absoulutely LOVE listening to music & dancing are honestly my happy places. I love to hang out also and trying new things. Which is why I was open to taking this course. 
+ <br>
+ <br> My Honest Opinion on the Code Skools course it was amazing but it was tuff at times and I struggled but I honestly had fun here it was literally the highlight of my summer. Being on this 6 hour zoom call with complete strangers,But it was great everybody has a different perosnality and as everybody got soo cofmartable with each other. I really was a BEAST in the HTML category but as we were going into Javascript and Jquery and stuff like that I started struggling more it was alot to remember and I kept forgetting but I did remember the basics tho. I honestly would take this course again next summer to advance my knowledge in coding because now I see coding isn't just something for nerds its for everybody. No matter what age. Thanks to my great instructors Roger and Frank I love you guys Yall two were the best taught me so much and helped me when I needed it its because of you 2 that I am able to make this website right now. Rating of this class 10/10 Hihgly recommend.  
 </body>
+<footer>
+  <p>Love from Liya . Best Wishes. <3 </p>
+</footer>
 </html>
