Finished my future plans page and added music

--- a/futureplans.html
+++ b/futureplans.html
@@ -28,4 +28,25 @@
           </ul>
         </div>
       </nav>
+      <body style="background-color: pink;">
+        <h1>My Future Plans in life!</h1>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script>
+        var audioElement = document.createElement("audio");
+        audioElement.setAttribute("src", "images/NBA_Youngboy_ALL_IN.mp3")
+        // Theme Button
+        $(".theme-button").on("click", function() {
+          audioElement.play();
+        });
+        $(".pause-button").on("click", function() {
+          audioElement.pause(); });
+        </script>
+        <p> 
+          <img src="Future Plans/white.jpg" style= "height: 300px;" style= "width: 100%;" style="float: left;" >
+          <img src="Future Plans/dermatologist.jpg" style= "height: 300px;" style= "width: 100%;" style="float: left;" >
+        <img src="Future Plans/Esthetician.png" style="height: 300px;" style= "width: 100%;" style="float: left;">
+        <img src="Future Plans/gynecologist.jpg" style="height: 250px;" style= "width: 100%;" style="float: left;">
+        </p> 
+        <br>In my future plans I plan on graduating in white I am going to try hard this school year to get into Honors society So I can graduate in white in the year 2023, probably top 50 in my class. I have to try very hard to that so will do. I also do want to go to college and become either a dermatologist, Esthetician, or gynecologist. Those 3 only because I am very obessed with your body I am always trying to figure out whats a better way to help my body I try to eat right and keep my figure the same and Try anf find new things to put on my face to make acne and darkspots go away, or stuff to help with body acne. New exofialants, moisturizers, cleansers and toners. Just want to be able to know whats best for not just my body but other peoples. 
+      </body>
       </html>
