Adding new files

--- a/ch.html
+++ b/ch.html
@@ -19,8 +19,7 @@
       }</script>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/family.html">Family</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
+        <a href="file:///C:/Users/Liyaa/finalproject/family.html"> Friends and Family</a>
         <a href="file:///C:/Users/Liyaa/finalproject/gallery.html">Gallery</a>
         <a href="file:///C:/Users/Liyaa/finalproject/info.html">info</a>
         <div id="musicControls" class="text-center">
