--- a/family.html
+++ b/family.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Beautiful Family</title>
+    <title>Friends and Family</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,5 +27,6 @@
       <div id="main">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
       </div>
+      <img src="" style= "height: 300px;" style= "width: 50%;">
 </body>
 </html>
