--- a/info.html
+++ b/info.html
@@ -23,8 +23,7 @@
   }</script>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/family.html">Family</a>
-    <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
+    <a href="file:///C:/Users/Liyaa/finalproject/family.html">Friends and Family</a>
     <a href="file:///C:/Users/Liyaa/finalproject/ch.html">Clients and hairstyles</a>
     <a href="file:///C:/Users/Liyaa/finalproject/final.html">Portfolio</a>
   </div>
