added pictures and finsihed my pages and entire HTML website

--- a/ch.html
+++ b/ch.html
@@ -6,7 +6,8 @@
     <title>Clients & Styles</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: cornflowerblue;">
+  <h1>I like to do hair. BOOK WITH ME!</h1>
     <script>function openNav() {
         document.getElementById("mySidebar").style.width = "250px";
         document.getElementById("main").style.marginLeft = "250px";
@@ -35,7 +36,7 @@
       <script src="https://code.jquery.com/jquery.js"></script>
     <script>
     var audioElement = document.createElement("audio");
-    audioElement.setAttribute("src", "images/Citygirls.mp3");
+    audioElement.setAttribute("src", "Hair/Nasty_Instrumental_Reproduced_By_2legitJay_.mp3");
     // Theme Button
     $(".theme-button").on("click", function() {
       audioElement.play();
@@ -44,6 +45,36 @@
       audioElement.pause(); });
 </script>
 
-<img src="" alt="" >
+<img src="Hair/0e97edcc78494451acaf63368007ae4a_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/cm-chat-media-video-8F9E7A29-F07C-4438-A490-BD6A67E8AA10_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/" style= "height: 450px;" style= "width: 50%;">
+<br> <p style="font-size: x-large;"> These are small and large size box braids with curly ends. 60$</p>
+<img src="Hair/filtered-0770A7F4-3250-4D47-B299-66494210B953_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Hair2_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Hair3_Moment(3).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/hair3.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/ips-3EC45D25-CBF5-4C51-9D9A-40B330ABFD41_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/ips-F3C7AF6C-6970-4498-86A8-00E263468ADB_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/ips-F3C7AF6C-6970-4498-86A8-00E263468ADB_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video4_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video4_Moment(3).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video4_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video6_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video8_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<br> <p style="font-size: x-large;">Box braids/Plaits small, medium and large. 50$-60$ </p>
+<img src="Hair/IMG_0986_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/IMG_0986_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/IMG_1392.jpg" style= "height: 450px;" style= "width: 50%;">
+<br> <p style="font-size: x-large;">Extra Long smedium box braids (thigh/knee kength). 70$ </p>
+<img src="Hair/Video5_Moment(2).jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/Video5_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<br> <p style="font-size: x-large;"> Slick Back Pony. 50$</p>
+<br><p style="font-size: xx-large;"> These are just extras. Bald cap method & small rope twists. I don't do these officially yet. </p>
+<img src="Hair/Video3_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+<img src="Hair/596b67cbf053423d8ebb2ea8f34a43a2_Moment.jpg" style= "height: 450px;" style= "width: 50%;">
+
+
+
+
 </body>
 </html>
