--- a/family.html
+++ b/family.html
@@ -6,7 +6,7 @@
     <title>Friends and Family</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:coral">
     <script>function openNav() {
         document.getElementById("mySidebar").style.width = "250px";
         document.getElementById("main").style.marginLeft = "250px";
@@ -20,13 +20,90 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="file:///C:/Users/Liyaa/finalproject/gallery.html#">Gallery</a>
-        <a href="file:///C:/Users/Liyaa/finalproject/friends.html">Friends</a>
         <a href="file:///C:/Users/Liyaa/finalproject/ch.html">Clients and hairstyles</a>
         <a href="file:///C:/Users/Liyaa/finalproject/info.html">info</a>
+        <script src="https://code.jquery.com/jquery.js"></script>
+
+        <div id="musicControls" class="text-center">
+          <button class="btn btn-warning btn-xs theme-button">
+            <span class="fa fa-music"></span> Play Song</button>
+          <button class="btn btn-dark btn-xs pause-button">
+            <span class="fa fa-pause"></span> Pause Song</button>
+        </div>
+    <script>
+    var audioElement = document.createElement("audio");
+    audioElement.setAttribute("src", "Hair/Rod_Wave_Rags2Riches_.mp3");
+    // Theme Button
+    $(".theme-button").on("click", function() {
+      audioElement.play();
+    });
+    $(".pause-button").on("click", function() {
+      audioElement.pause();});
+      </script>
       </div>
       <div id="main">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
       </div>
-      <img src="" style= "height: 300px;" style= "width: 50%;">
+      <h1>These are my beautiful Family & Friends.</h1>
+      <div>
+        <img src="Family/IMG_6076.JPG" style= "height: 300px;" style= "width: 100%;">
+       <p style="font-size: x-large;"> This my Family which ranges from my mother down to my cousins. The first picture is My mother my two brothers and my Grandpa.</p>
+        <img src="Family/413c0fe36ece42c1b9f893e6aeffb0fb_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+        <img src="Family/973ca4a0f05642ef84bbe7411c02022b_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+        <img src="Family/b73d3890610e4326bf0f8e6a083a92d8_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+        <img src="Family/D_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0171.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0234.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0238.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0248.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/ipv-0D5708DE-27D1-4D78-BBA5-ECD13A930DC5_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_1372.jpg" style= "height: 300px;" style= "width: 50%;">
+
+      <br><p style="font-size: x-large;"> After them its my cousins Ja'lyn and yall know Naee. Sn/Thats my other baby brother in the picture with me and Naee. These aren't my only cousins these are just my closest.</p> 
+      <img src="Family/5 out of 5.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/68C7B63A-9442-4D3F-82F1-6ED14A772ED4.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/B583EA29-0A1E-43B1-AB31-F362FA4B579A.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/cm-chat-media-video-2E55D1DD-017F-480F-8CBF-06AEE511ACE9_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/chat-media-video-FE49E7A1-7856-440D-BC4C-247EF950F947_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_3886_Original.JPG" style= "height: 300px;" style= "width: 50%;">
+      <br>
+      <img src="Family/IMG_5455_Original.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_2621.jpg" style= "height: 300px;" style= "width: 50%;">
+<br><p style="font-size: x-large;">These are 2 out of 4 of my step siblings. I have more just no pictures of them. </p>
+
+
+
+
+
+
+      <img src="Family/5d60b13d2d2e459baa541ae9167d7552_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/66ddba5166394eb4941c5d501bda2871_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/6d4400f48bc34f89a19a3ec3b484db4e_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/78dddb7ffa5f4aba81d5e7423ed5d2a3_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/7abfdc1432e441e69ec2230e37ead3e6_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/7ac31cad8146404ea2b57e213d841fc0_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/ddb8c7fc0f134f3891c4daf75cd6b01c_Moment.jpg" style= "height: 300px;" style= "width: 50%;">      <img src="Family/IMG_0671_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0726_Original.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0781.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0795.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0860.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0882_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0901_Original (Edited).PNG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_0949_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_1026_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_2011.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_3883.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_3885.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_5632_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/3f46fe5d01d84b279e8154f5e7af2477_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/98c96ff07d624cd28472138ec47f69c0_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/chat-media-video-825427EB-9E57-48FE-8A01-73F77017ECFA_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+
+      <img src="Family/78dddb7ffa5f4aba81d5e7423ed5d2a3_Moment.jpg" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_2972_Original.JPG" style= "height: 300px;" style= "width: 50%;">
+      <img src="Family/IMG_1567_Original.jpg" style= "height: 300px;" style= "width: 50%;">
+
+
+      </div>
 </body>
 </html>
